changes' is much more useful than 'misc edits' or 'code cleanup'.
3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------

random_maps/wall.c, random_maps/style.c, random_maps/door.c, random_maps/exit.c,
  random_maps/random_map.c, random_maps/rogue_layout.c, random_maps/test.c,
  random_maps/special.c, random_maps/floor.c, random_maps/monster.c,
  random_maps/standalone.c, random_maps/treasure.c: Fix some minor issues
  (variables that should have been static, using 0 instead of NULL [leading to
  more confusing code], mismatching prototype and so on) found  using the static
  analysis tool "sparse" (made for Linux kernel originally).
Arvid Norlander 2009-02-03

random_maps/reader.l, common/loader.l, include/libproto.h: The shared yyerror()
  in loader.l didn't work properly in reader.l (which was the intention).
  Instead it caused memory errors (and potentially segfaults) when called. This
  was due to yyerror() accessing the static variable yytext, which is unique to
  each file. Since yytext in loader.l was often freed already when yyerror() in
  reader.l was called this would cause memory errors. If it wasn't yet freed it
  would instead report irrelevant data in the error message. Thus duplicate the
  routine to both of the files, and make them both static.
Arvid Norlander 2009-02-03

Encapsulate access to xxx_bonus[] (and similar) arrays with accessor functions
get_xxx_bonus().
---
common/living.c: Make arrays static. Add accessor functions.
common/living.h: Remove arrays. Add accessor function prototypes.
*.c: Replace xxx_bonus[stat] with get_xxx_bonus(stat).
Andreas Kirschbaum 2009-02-03

common/object.c, common/exp.c, common/time.c, common/recipe.c, common/arch.c,